maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:77: error: not found: value isFreeDirection
		case 0 => { if (isFreeDirection(Direction.NORD)) { while (!estFaceMur()) { avance() }; droite()} else keepHandOnSideWall()}
                                ^